--- a/ers-2022.bib
+++ b/ers-2022.bib
@@ -597,3 +597,47 @@ year = {2016}
   year={2017},
   organization={IEEE}
 }
+
+@article{EDD2020,
+  doi = {10.21227/F8XG-WB80},
+  url = {https://ieee-dataport.org/competitions/endoscopy-disease-detection-and-segmentation-edd2020},
+  author = {Ali, Sharib  and Braden, Barbara and Lamarque, Dominique and Realdon, Stefano and Bailey, Adam and Cannizzaro, Renato and Ghatwary, Noha and Rittscher, Jens  and Daul, Christian  and East , James },
+  keywords = {Artificial Intelligence, Computer Vision, Image Processing, Machine Learning, Biomedical and Health Sciences, Medical Imaging, Detection, localisation, Semantic Segmentation, out-of-sample detection},
+  title = {Endoscopy Disease Detection and Segmentation (EDD2020)},
+  publisher = {IEEE DataPort},
+  year = {2020},
+  copyright = {Creative Commons Attribution}
+}
+
+@article{NeoPolyp,
+  doi = {10.48550/ARXIV.2107.05023},
+  url = {https://arxiv.org/abs/2107.05023},
+  author = {Lan, Phan Ngoc and An, Nguyen Sy and Hang, Dao Viet and Van Long, Dao and Trung, Tran Quang and Thuy, Nguyen Thi and Sang, Dinh Viet},
+  keywords = {Image and Video Processing (eess.IV), Computer Vision and Pattern Recognition (cs.CV), FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title = {NeoUNet: Towards accurate colon polyp segmentation and neoplasm detection},
+  publisher = {arXiv},
+  year = {2021},
+  copyright = {Creative Commons Attribution Non Commercial No Derivatives 4.0 International}
+}
+
+@article{SUN-SEG,
+  doi = {10.48550/ARXIV.2203.14291},
+  url = {https://arxiv.org/abs/2203.14291},
+  author = {Ji, Ge-Peng and Xiao, Guobao and Chou, Yu-Cheng and Fan, Deng-Ping and Zhao, Kai and Chen, Geng and Van Gool, Luc},
+  keywords = {Image and Video Processing (eess.IV), Computer Vision and Pattern Recognition (cs.CV), FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title = {Video Polyp Segmentation: A Deep Learning Perspective},
+  publisher = {arXiv},
+  year = {2022},
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@article{Polyp-Box-Seg,
+author = {Chen, Siwei and Urban, Gregor and Baldi, Pierre},
+year = {2022},
+month = {04},
+pages = {121},
+title = {Weakly Supervised Polyp Segmentation in Colonoscopy Images Using Deep Neural Networks},
+volume = {8},
+journal = {Journal of Imaging},
+doi = {10.3390/jimaging8050121}
+}
