--- a/ers-2022.tex
+++ b/ers-2022.tex
@@ -325,6 +325,16 @@ attribute, object mask, boundary, sribble, polygon
 109554
 \\
 \hline
+Polyp-Box-Seg &
+colono-scopy&
+over 2000/ N/A &
+4070 &
+\longcell 
+tubular adenoma, hyperplastic, sessile serrated adenoma, non-serrated sessile, ubulovillous adenoma, inflammatory, traditional serrated adenoma, lymphoid nodule, CA adenocarcinoma, hamartomatous, juvenile polyp, CA lymphoma, sessile serrated adenoma w dysplasia, mucosal prolapse, CA squamous/epidermoid, other &
+graphical, pixel-wise annotations and bounding-boxes &
+0
+\\
+\hline
 
 \end{longtable}
 
