--- a/ers-2022.tex
+++ b/ers-2022.tex
@@ -149,8 +149,7 @@ Existing web resources are relatively poor. Mostly, they contain dozen of images
 
 Specialized challenges are another more valuable source of endoscopic images and videos (i.e. MICCAI incl. Giana, Kaggle) which provide benchmark data sets that come with expert ground truth contours and standard evaluation measures to assess automated segmentation performance. 
 In MICCAI 2015 challenge which covers a polyp segmentation in both colonoscopy images (SD and HD) and the tasks related to WCE image classification, ASU-Mayo data set was used. It is the first, largest, and a constantly growing set of short and long colonoscopy videos, collected and annotated at the Department of Gastroenterology at Mayo Clinic in Arizona. Currently this data set consists of 38 different, pixel-wise annotated videos (20 in training, 18 in testing set). Each image in this database comes with a ground truth image or a binary mask that indicates the polyp region. 20 short training colonoscopy videos of which 10 videos have a unique polyp inside and the other 10 videos have no polyps, HD (1920x1080) and SD (856x480, 712 x 480)  resolutions. Data set consists of 18996 images and a total of 4278 polyp instances, testing set -  17575 in total and 4313 with polyps \cite{Mayo}. 
-In Endoscopy Disease Detection challenge 2020\cite{EDD2020} which covers both segmentation and detection of endoscopy diseases authors have proposed a novel dataset, namely EDD2020. The dataset consists of five classes for both detection and segmentation tasks - nondysplastic Barret's, suspicious precancerous lesion, high-grade dysplasia, cancer and polyp. The data were collected from Ambroise PareHospital of Boulogne-Billancourt, Paris, France; Centro Riferimento Oncologico IRCCS, Aviano, Italy; Istituto Oncologico Veneto, Padova, Italy and John
-Radcliffe Hospital, Oxford, UK. Training dataset is available upon registration and consists of 386 images. Each image from the training set comes with a mask which indicates the disease area.
+In Endoscopy Disease Detection challenge 2020\cite{EDD2020} which covers both segmentation and detection of endoscopy diseases authors have proposed a novel dataset, namely EDD2020. The dataset consists of five classes for both detection and segmentation tasks - nondysplastic Barret's, suspicious precancerous lesion, high-grade dysplasia, cancer and polyp. The data were collected from Ambroise PareHospital of Boulogne-Billancourt, Paris, France; Centro Riferimento Oncologico IRCCS, Aviano, Italy; Istituto Oncologico Veneto, Padova, Italy and John Radcliffe Hospital, Oxford, UK. Training dataset is available upon registration and consists of 386 images. Each image from the training set comes with a mask which indicates the disease area.
 
 The ETIS-LARIB (ENSEA/CNRS/University of Cergy-Pontoise) data set contains 196 polyp images with a resolution of 1225x966 pixels in HD \cite{ETIS}. All images were extracted from 34 different colonoscopy videos which contain 44 unique polyps. The total number of polyps is 208. These data sets do not contain any “healthy” (normal) images and are usually used for testing.
 
@@ -164,11 +163,11 @@ The next data set is called KiD and is divided into two sets: KiD1 and KiD2. It 
 
 BKAI-IGH NeoPolyp is a new segmentation dataset released by the collaboration of Hanoi University of Science and Technology and Insitute of Gastroenterology and Hepatology(IGH) from Vietnam in \cite{NeoPolyp}. The dataset consists of 1200 images and is divided into training(1000 images) and test set(200 images). The annotations were added and verified by two endoscopists from IGH. All polyps in the dataset are classified into neoplastic or non-neoplastic classes. Each image from the training dataset comes with a ground truth image of the polyp region. Images in both training and test datasets are of various resolutions ranging from 1280x959 to 1280x1024.
 
-Another dataset called SUN-SEG which were introduced in \cite{SUN-SEG} as an extension of original SUN database includes 49136 polyp frames taken from 100 different polyps and 109554 frames which do not contain any polyps. The initial database was provided by Showa University and Nagoya University. All the frames were taken from 113 colonoscopy videos from which 100 were positive and 13 were negative. Authors of this dataset have extended the original SUN detection datasaet with variety of labels to allow its usage for segmentation tasks. The segmentation masks were initially made by 10 experienced annotators. Then, three colonoscopy researchers have re-verified and corrected these annotations. 
+Another dataset called SUN-SEG which was introduced in \cite{SUN-SEG} as an extension of the original SUN database includes 49136 polyp frames taken from 100 different patients and 109554 frames which do not contain any polyps. The initial database was provided by Showa University and Nagoya University. All the frames were taken from 113 colonoscopy videos from which 100 were positive and 13 were negative. Authors of this dataset have extended the original SUN detection datasaet with variety of labels to allow its usage for segmentation tasks. The segmentation masks were initially made by 10 experienced annotators. Then, three colonoscopy researchers have re-verified and corrected these annotations. 
 
-The next dataset called Polyp-Box-Seg\cite{Polyp-Box-Seg} consists of 4070 colonoscopy images with popyls from over 2000 patients. All of the images were annotated with bounding boxes over the polyps regions and 1300 randomly chosen were additionally annotated with segmentation masks. All the 4070 polyp images were hand-selected from colonoscopy screening videos so that each image contains an unique polyp. Originally all images in the dataset were having a resolution of 460x640, but then were resized to 384x384 resolution. The classes available in the dataset include but are not limited to: Tabular abdomena, Hyperplastic, Sessile serrated adenoma nad non-serrated setssile.
+The next dataset called Polyp-Box-Seg\cite{Polyp-Box-Seg} consists of 4070 colonoscopy images with poypls from over 2000 patients. All of the images were annotated with bounding boxes over the polyps regions and 1300 randomly chosen were additionally annotated with segmentation masks. All the 4070 polyp images were manually selected from colonoscopy screening videos so that each image contains an unique polyp. Originally all images in the dataset were having a resolution of 460x640, but then were resized to 384x384 resolution. The classes available in the dataset include, but are not limited to: Tabular abdomena, Hyperplastic, Sessile serrated adenoma nad non-serrated setssile.
 
-All mentioned above data sets are available to the public either after registration or sending an inquiry.
+All datasets mentioned above are available to the public either after registration or sending an inquiry.
 
 An interesting data set was presented by \cite{wang2017}. They used huge data set consisting of 289 colonoscopy videos (156337 images, 60914 with polyps) form 151 patients with polyp history. Moreover the set contains a division into individual types and characteristics of polyps: carcinomatous, adenomatous, hyperplastic, inflammatory and small, isochromatic, flat. There is no information about type of annotations. Unfortunately, this data set is not available in public.
 
